WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
283594
[scroll-animations] Anonymous timelines should not share timeline object
https://bugs.webkit.org/show_bug.cgi?id=283594
Summary
[scroll-animations] Anonymous timelines should not share timeline object
Nikos Mouchtaris
Reported
2024-11-22 14:29:20 PST
[scroll-animations] Anonymous timelines should not share timeline object
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-22 17:22:36 PST
<
rdar://problem/140449183
>
Nikos Mouchtaris
Comment 2
2024-11-22 17:37:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37063
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug