[scroll-animations] Anonymous timelines should not share timeline object https://bugs.webkit.org/show_bug.cgi?id=283594 Include a Radar link (OOPS!).

Reviewed by NOBODY (OOPS!).

When style sharing an anonymous timeline animation, we create only one timeline.
This would cause us to try and set the subject/source multiple times on the same
timeline. Instead, create a timeline per animation.

* Source/WebCore/animation/CSSAnimation.cpp:
(WebCore::CSSAnimation::syncPropertiesWithBackingAnimation):
* Source/WebCore/animation/ScrollTimeline.h:
(WebCore::ScrollTimeline::scroller const):
* Source/WebCore/animation/ViewTimeline.cpp:
(WebCore::ViewTimeline::create):
* Source/WebCore/animation/ViewTimeline.h: